Implemented Basic User Registration
